--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,13 @@
 <head>
 
   <link rel="stylesheet" href="bootstrap.min.css">
+  <link rel="stylesheet" href="octicons.min.css">
   <script type="text/javascript" src="vendor.bundle.js"></script>
   <script type="text/javascript" src="app.bundle.js"></script>
 </head>
 <body>
-    <h3>Hello world</h3>
-    <div id='app'>
-      <app></app>
+    <div id='app' class='container'>
+      <app class='row'></app>
     </div>
 </body>
 </html>
