--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 
   <link rel="stylesheet" href="bootstrap.min.css">
-  <link rel="stylesheet" href="octicons.min.css">
+  <link rel="stylesheet" href="font-awesome.min.css">
   <script type="text/javascript" src="vendor.bundle.js"></script>
   <script type="text/javascript" src="app.bundle.js"></script>
 </head>
