got cordova plugin working

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 
   <link rel="stylesheet" href="bootstrap.min.css">
   <link rel="stylesheet" href="font-awesome.min.css">
+  <script src="cordova.js"></script>
   <script type="text/javascript" src="vendor.bundle.js"></script>
   <script type="text/javascript" src="app.bundle.js"></script>
 </head>
