--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="app.bundle.js"></script>
 </head>
 <body>
-    <div id='app' class='container'>
+    <div id='app' class='container-fullwidth'>
       <app class='row'></app>
     </div>
 </body>
