--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id='app' class='container-fullwidth'>
-      <app class='row'></app>
+      <main></main>
     </div>
 </body>
 </html>
